# make3d

./: .gitmodules  CMakeLists.txt  vcpkg.json
Assets/: CompileShader.bat  SimpleShader.vert
src/: AssetManager.cpp  AssetManager.h  IM3DGfxDevice.h  M3DNullGfxDevice.cpp  M3DNullGfxDevice.h  M3DRenderer.cpp  M3DRenderer.h  M3DVulkanGfxDevice.cpp  M3DVulkanGfxDevice.h  M3DWindow.h  Modules.h  Platform.h  RenderDataStructures.h  RenderDevice.h  Renderer.h  SystemTypes.h  engine.cpp  engine.h  headers.h  main.cpp
src/memory/: Allocator.h  DefaultAllocator.cpp  DefaultAllocator.h  LinearAllocator.cpp  LineraAllocator.h  MemUtils.h  MemoryModule.cpp  MemoryModule.h
